refactor layout color and remove test appsetting

--- a/src/Web.WebApp/Pages/Account/Login.cshtml
+++ b/src/Web.WebApp/Pages/Account/Login.cshtml
@@ -30,15 +30,15 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div class="checkbox mb-3">
-                                <label asp-for="Input.RememberMe" class="form-label">
+                                <label asp-for="Input.RememberMe" class="form-label" style="white-space: nowrap">
                                     <input type="checkbox" checked class="form-check-input" asp-for="Input.RememberMe"/>
-                                    &nbsp; Stay signed in
+                                    Stay signed in
                                 </label>
                             </div>
                         </div>
-                        <div class="col-md-6 text-md-end">
+                        <div class="col-lg-6 text-md-end">
                             <a href="/account/forgotpassword">Forgotten password?</a>
                         </div>
                     </div>
