--- a/src/Web.WebApp/Shared/BlankLayout.razor
+++ b/src/Web.WebApp/Shared/BlankLayout.razor
@@ -3,22 +3,7 @@
 <nav class="navbar navbar-top">
     <div class="container">
         <a class="navbar-brand" href="#">
-        <span style="font-family: 'Times New Roman', 'Times-Roman', serif; font-size: 32px">
-            <span style='color:#00796B'>T</span>
-            <span style='color:#00e8ea'>r</span>
-            <span style='color:#02befd'>a</span>
-            <span style='color:#059afa'>c</span>
-            <span style='color:#056afa'>k</span>
-            <span style='color:#0538fa'>M</span>
-            <span style='color:#5303fc'>y</span>
-            <span style='color:#7a04fb'>E</span>
-            <span style='color:#a302fd'>x</span>
-            <span style='color:#ca05fa'>p</span>
-            <span style='color:#eb04fb'>e</span>
-            <span style='color:#fb04d7'>n</span>
-            <span style='color:#fa0596'>s</span>
-            <span style='color:#fc0351'>e</span>
-        </span>
+            <img src="/img/TrackMyExpense.svg" style="width: auto; height: 24px;" title="Home"/>
         </a>
         <form class="d-flex">
             <a class="btn btn-outline" href="/account/login">Log in</a>
