--- a/src/Web.WebApp/App.razor
+++ b/src/Web.WebApp/App.razor
@@ -10,8 +10,12 @@
             </AuthorizeRouteView>
         </Found>
         <NotFound>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <p>Sorry, there's nothing at this address.</p>
+            <LayoutView Layout="@typeof(BlankLayout)">
+                <h5>404 Not Found</h5>
+                <p>Sorry, this page has been moved or not exist.</p>
+                <HeadContent>
+                    <meta name="robots" content="noindex" />
+                </HeadContent>
             </LayoutView>
         </NotFound>
     </Router>
