--- a/src/Web.WebApp/Shared/MainLayout.razor.css
+++ b/src/Web.WebApp/Shared/MainLayout.razor.css
@@ -9,14 +9,12 @@
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background: rgb(255,255,255);
+    background-image: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(225,225,225,1) 70%, rgba(225,225,225,1) 100%);
 }
 
 .top-row {
-    background-color: #f7f7f7;
-    border-bottom: 1px solid #d6d5d5;
-    justify-content: flex-end;
-    height: 3.5rem;
+    justify-content: center;
     display: flex;
     align-items: center;
 }
