--- a/src/Web.WebApp/Shared/NavMenu.razor.css
+++ b/src/Web.WebApp/Shared/NavMenu.razor.css
@@ -1,10 +1,13 @@
 .navbar-toggler {
-    background-color: rgba(255, 255, 255, 0.1);
+    border: none;
+}
+
+.navbar {
+    border-style: none;
 }
 
 .top-row {
-    height: 3.5rem;
-    background-color: rgba(0,0,0,0.4);
+    text-align: center;
 }
 
 .navbar-brand {
@@ -32,7 +35,7 @@
     }
 
     .nav-item ::deep a {
-        color: #d7d7d7;
+        color: #009688;
         border-radius: 4px;
         height: 3rem;
         display: flex;
@@ -40,15 +43,15 @@
         line-height: 3rem;
     }
 
-.nav-item ::deep a.active {
-    background-color: rgba(255,255,255,0.25);
-    color: white;
-}
+        .nav-item ::deep a.active {
+            background-color: rgba(0,0,0,0.05);
+            color: #00796B;
+        }
 
-.nav-item ::deep a:hover {
-    background-color: rgba(255,255,255,0.1);
-    color: white;
-}
+        .nav-item ::deep a:hover {
+            background-color: rgba(0,0,0,0.1);
+            color: #00796B;
+        }
 
 @media (min-width: 641px) {
     .navbar-toggler {
