--- a/src/Web.WebApp/Pages/_Host.cshtml
+++ b/src/Web.WebApp/Pages/_Host.cshtml
@@ -12,11 +12,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebApp</title>
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+
     <link href="css/site.css" rel="stylesheet" />
     <link href="css/bootstrap-float-label.min.css" rel="stylesheet" />
     <link href="Web.WebApp.styles.css" rel="stylesheet" />
-    <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <component type="typeof(App)" render-mode="ServerPrerendered" />
@@ -35,5 +37,6 @@
     <script src="js/site.js" asp-append-version="true"></script>
     <script src="_framework/blazor.server.js"></script>
     <script src="js/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 </html>
