MudBlazor account pages

--- a/src/Web.WebApp/App.razor
+++ b/src/Web.WebApp/App.razor
@@ -10,7 +10,7 @@
             </AuthorizeRouteView>
         </Found>
         <NotFound>
-            <LayoutView Layout="@typeof(BlankLayout)">
+            <LayoutView Layout="@typeof(EmptyLayout)">
                 <h5>404 Not Found</h5>
                 <p>Sorry, this page has been moved or not exist.</p>
                 <HeadContent>
