--- a/src/Web.WebApp/Components/GoogleRecaptcha.razor
+++ b/src/Web.WebApp/Components/GoogleRecaptcha.razor
@@ -1,7 +1,7 @@
 ﻿@using Newtonsoft.Json
 @inject IJSRuntime JSRuntime;
 
-<div id="googleRecaptcha"></div>
+<div id="googleRecaptcha" style="overflow: hidden"></div>
 
 
 @code {
