--- a/src/Web.WebApp/Pages/Account/ForgotPassword.razor
+++ b/src/Web.WebApp/Pages/Account/ForgotPassword.razor
@@ -1,6 +1,6 @@
 ﻿@page "/account/forgotpassword"
 @attribute [AllowAnonymous]
-@layout BlankLayout
+@layout EmptyLayout
 @using System.ComponentModel.DataAnnotations
 @using Core.Application.Services.IServices
 @using Core.Application.Settings
@@ -17,52 +17,41 @@
 
 @inject IOptions<ReCaptchaSetting> ReCaptchaSetting
 
-<section class="d-flex justify-content-center">
-    <div class="col-md-5 mb-5 card">
-        <div class="card-header">
-            <h4>Forgot Password</h4>
-        </div>
-        <div class="card-body">
+<MudContainer Class="mt-16" MaxWidth="MaxWidth.Small">
+    <MudCard Outlined="true" Elevation="1" Class="rounded-lg p-3">
+        <MudCardHeader>
+            <CardHeaderContent>
+                <MudText Typo="Typo.h5">Reset Password</MudText>
+            </CardHeaderContent>
+        </MudCardHeader>
+        <MudCardContent>
             @if (IsSubmitted) {
                 @if (!string.IsNullOrWhiteSpace(InfoMessage))
-                    {
-                        <div class="alert alert-info">
-                        <span class="oi oi-info"></span> &nbsp;
-                        @((MarkupString)InfoMessage)
-                        </div>
-                    }
+                {
+                    <MudAlert Severity="Severity.Info">@((MarkupString)InfoMessage)</MudAlert>
+                }
             } else {
                 <div class="mb-3">Enter email address to receive a password reset link.</div>
                 <EditForm Model="@Input" OnValidSubmit="@GenerateResetPasswordEmail">
                     <DataAnnotationsValidator/>
-                    <div>
-                        <div class="mb-2">
-                            <InputText id="inputEmail" class="form-control" @bind-Value="@Input.Email" placeholder="Email" autocomplete="off" spellcheck="false"/>
-                            <ValidationMessage For="@(() => Input.Email)"/>
-                        </div>
-                        <div class="mb-2">
-                            <GoogleRecaptcha @ref="googleRecaptcha" SiteKey=@ReCaptchaSetting.Value.SiteKey SecretKey=@ReCaptchaSetting.Value.SecretKey OnCaptchaChanged="@OnCaptchaChanged" />
-                        </div>
-                        <div class="mb-2">
-                            <button type="submit" disabled="@SubmitDisabled" class="btn btn-primary">
-                                <span class="spinner-border spinner-border-sm" hidden="@(!IsSubmitting)" role="status" aria-hidden="true"></span>
-                                <span>Get password reset link</span>
-                            </button>
-                        </div>
+                    <MudTextField Label="Email" @bind-Value="@Input.Email" For="@(() => Input.Email)" />
+                    <div class="my-3">
+                        <GoogleRecaptcha @ref="googleRecaptcha" SiteKey=@ReCaptchaSetting.Value.SiteKey SecretKey=@ReCaptchaSetting.Value.SecretKey OnCaptchaChanged="@OnCaptchaChanged" />
                     </div>
-
+                    <MudButton ButtonType="ButtonType.Submit" Variant="Variant.Filled" Color="Color.Primary" Disabled="@SubmitDisabled">
+                        <span class="spinner-border spinner-border-sm" hidden="@(!IsSubmitting)" role="status" aria-hidden="true"></span>
+                        <span>Get reset password link</span>
+                    </MudButton>
+                    
                     @if (!string.IsNullOrWhiteSpace(InfoMessage))
                     {
-                        <div class="alert alert-info">
-                        <span class="oi oi-info"></span> &nbsp;
-                        @((MarkupString)InfoMessage)
-                        </div>
+                        <MudAlert Severity="Severity.Info">@((MarkupString)InfoMessage)</MudAlert>
                     }
                 </EditForm>
             }
-        </div>
-    </div>
-</section>
+        </MudCardContent>
+    </MudCard>
+</MudContainer>
 @* Debug only: print email confirmation link *@
 @if (!string.IsNullOrWhiteSpace(EmailConfirmLink) && HostEnvironment.IsDevelopment())
 {
@@ -98,7 +87,7 @@
             return;
         }
 
-        InfoMessage = @"Thank you. We sent the reset password link to your email.
+        InfoMessage = @"Thank you. We sent the reset password link to your email.<br/>
                     If your email is registered. Please check your inbox or spam folder, and click on the reset password link.";
         IsSubmitted = true;
 
