--- a/src/Web.WebApp/Pages/Account/Login-Not-Work.razor
+++ b/src/Web.WebApp/Pages/Account/Login-Not-Work.razor
@@ -1,6 +1,6 @@
 ﻿@page "/account/login-not-working"
 @attribute [AllowAnonymous]
-@layout BlankLayout
+@layout EmptyLayout
 @using Microsoft.AspNetCore.Components
 @using Core.Application.Models
 @using Core.Application.Services.IServices
