--- a/src/Web.WebApp/Pages/Account/RegisterVerify.razor
+++ b/src/Web.WebApp/Pages/Account/RegisterVerify.razor
@@ -1,6 +1,6 @@
 ﻿@page "/account/registerverify/{userid}"
 @attribute [AllowAnonymous]
-@layout BlankLayout
+@layout EmptyLayout
 @using Core.Application.Services.IServices
 @using Microsoft.AspNetCore.Hosting
 
@@ -9,8 +9,8 @@
 @inject IWebHostEnvironment HostEnvironment;
 @inject IEmailService EmailService;
 
-<section class="d-flex justify-content-center">
-    <div class="col-md-5 mb-5">
+<MudContainer Class="mt-16" MaxWidth="MaxWidth.Small">
+    <MudPaper Outlined="true" Elevation="1" Class="p-3">
         <h5>Email Confirmation</h5>
         <hr />
         <p>
@@ -20,8 +20,8 @@
         <p>
             Haven't received it? <a href="/account/generateemailconfirmation?email=@Email">Click here</a> to resend the email.
         </p>
-    </div>
-</section>
+    </MudPaper>
+</MudContainer>
 
 @code {
     [Parameter]
