--- a/src/Web.WebApp/Pages/Account/ResetPassword.razor
+++ b/src/Web.WebApp/Pages/Account/ResetPassword.razor
@@ -1,6 +1,6 @@
 ﻿@page "/account/resetpassword"
 @attribute [AllowAnonymous]
-@layout BlankLayout
+@layout EmptyLayout
 @using Core.Application.Services.IServices
 @using System.ComponentModel.DataAnnotations
 
