--- a/src/Web.WebApp/Pages/Index.razor
+++ b/src/Web.WebApp/Pages/Index.razor
@@ -1,5 +1,8 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<MudContainer Class="mt-16" MaxWidth="MaxWidth.False">
+    <h1>Hello, world!</h1>
 
-Welcome to your new app.
+    Welcome to your new app.
+</MudContainer>
+
