--- a/src/Web.WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/Web.WebApp/Pages/Shared/_Layout.cshtml
@@ -1,48 +1,57 @@
-﻿<!DOCTYPE html>
+﻿@using MudBlazor
+@using Web.WebApp.Themes
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
+    <base href="~/" />    
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/bootstrap-float-label.min.css" />
+    <link href="~/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link href="Web.WebApp.styles.css" rel="stylesheet" />
+    
+    <script>
+        // Hack Mud input floating label
+        function shrinkLabel(thisEl) {
+            if (!thisEl) return;
+            var parentEl = thisEl.parentNode;
+            if (parentEl) {
+                if (thisEl.value) {
+                    parentEl.classList.add("mud-shrink");
+                } else {
+                    parentEl.classList.remove("mud-shrink");
+                }
+            }
+        }
+    </script>
 </head>
 <body>
-    <nav class="navbar navbar-top">
-        <div class="container">
-            <a class="navbar-brand" href="#">
-            <span style="font-family: 'Times New Roman', 'Times-Roman', serif; font-size: 32px">
-                <span style='color:#00796B'>T</span>
-                <span style='color:#00e8ea'>r</span>
-                <span style='color:#02befd'>a</span>
-                <span style='color:#059afa'>c</span>
-                <span style='color:#056afa'>k</span>
-                <span style='color:#0538fa'>M</span>
-                <span style='color:#5303fc'>y</span>
-                <span style='color:#7a04fb'>E</span>
-                <span style='color:#a302fd'>x</span>
-                <span style='color:#ca05fa'>p</span>
-                <span style='color:#eb04fb'>e</span>
-                <span style='color:#fb04d7'>n</span>
-                <span style='color:#fa0596'>s</span>
-                <span style='color:#fc0351'>e</span>
-            </span>
-            </a>
-            <form class="d-flex">
-                <a class="btn btn-outline" href="/account/login">Log in</a>
-                <a class="btn btn-outline" href="/account/register">Register</a>
-            </form>
-        </div>
-    </nav>
-    <div class="container pt-5">
+    <component type="typeof(MudThemeProvider)" render-mode="ServerPrerendered" param-Theme="@PrimaryTheme.Default" />
+    <div id="mud-snackbar-container" class="mud-snackbar-location-top-right"></div>
+    <div class="mud-layout" style="">
+        <header class="mud-appbar mud-appbar-fixed-top mud-elevation-1">
+            <div class="mud-toolbar mud-toolbar-gutters mud-toolbar-appbar">
+                <a href="/"><img src="/img/TrackMyExpense.svg" style="width: auto; height: 22px;"></a>
+                <div class="flex-grow-1"></div>
+                <a href="/account/login" class="mud-typography mud-link mud-primary-text mud-link-underline-hover mud-typography-body1 mr-3">Log In</a>
+                <a href="/account/register" class="mud-typography mud-link mud-primary-text mud-link-underline-hover mud-typography-body1">Create Account</a>
+            </div>
+        </header>
+    </div>
+
+    <div class="mud-main-content">
         @RenderBody()
     </div>
 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" ></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
+<script src="~/_content/MudBlazor/MudBlazor.min.js"></script>
+
 @await RenderSectionAsync("Scripts", required: false)
 
 </body>
