--- a/src/Web.WebApp/Pages/_Host.cshtml
+++ b/src/Web.WebApp/Pages/_Host.cshtml
@@ -14,10 +14,11 @@
     <base href="~/" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    
+    <link rel="stylesheet" href="~/css/bootstrap/bootstrap.min.css" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <link href="css/site.css" rel="stylesheet" />
-    <link href="css/bootstrap-float-label.min.css" rel="stylesheet" />
     <link href="Web.WebApp.styles.css" rel="stylesheet" />
 </head>
 <body>
