--- a/src/Web.WebApp/Shared/MainLayout.razor
+++ b/src/Web.WebApp/Shared/MainLayout.razor
@@ -1,17 +1,28 @@
-﻿@inherits LayoutComponentBase
+﻿@using Web.WebApp.Themes
+@inherits LayoutComponentBase
 
-<MudThemeProvider/>
+<MudThemeProvider Theme="@PrimaryTheme.Default"/>
 <MudDialogProvider/>
 <MudSnackbarProvider/>
 
-<div class="page">
-    <div class="sidebar">
+<MudLayout>
+    <AppBar OnDrawerToggle="@DrawerToggle" DrawerOpen="@_drawerOpen"/>
+    <MudDrawer @bind-Open="@_drawerOpen" Elevation="2">
+        <MudDrawerHeader Style="padding: 12px;">
+            <a href="/"><img src="/img/TrackMyExpense.svg" style="width: auto; height: 22px;"/></a>
+        </MudDrawerHeader>
         <NavMenu />
-    </div>
+    </MudDrawer>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
 
-    <div class="main">
-        <div class="content px-4">
-            @Body
-        </div>
-    </div>
-</div>
+@code {
+    bool _drawerOpen = true;
+
+    void DrawerToggle(bool drawerOpen)
+    {
+        _drawerOpen = drawerOpen;
+    }
+}
