--- a/src/Web.WebApp/Shared/MainLayout.razor
+++ b/src/Web.WebApp/Shared/MainLayout.razor
@@ -15,11 +15,12 @@
     </MudDrawer>
     <MudMainContent>
         @Body
+        <PageFooter />
     </MudMainContent>
 </MudLayout>
 
 @code {
-    bool _drawerOpen = true;
+    bool _drawerOpen = false;
 
     void DrawerToggle(bool drawerOpen)
     {
