--- a/src/Web.WebApp/App.razor
+++ b/src/Web.WebApp/App.razor
@@ -4,18 +4,22 @@
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
-                    <p>You're not log in yet. You're redirected to Log In page...</p>
+                    <MudContainer MaxWidth="@MaxWidth.Medium" Class="p-5" Style="min-height: 320px;">
+                        <p class="p-5">You're not log in yet. You're redirected to Log In page...</p>
+                    </MudContainer>
                     <RedirectToLoginPage />
                 </NotAuthorized>
             </AuthorizeRouteView>
         </Found>
         <NotFound>
             <LayoutView Layout="@typeof(EmptyLayout)">
-                <h5>404 Not Found</h5>
-                <p>Sorry, this page has been moved or not exist.</p>
-                <HeadContent>
-                    <meta name="robots" content="noindex" />
-                </HeadContent>
+                <MudContainer MaxWidth="@MaxWidth.Medium" Class="p-5" Style="min-height: 320px;">
+                    <h5>404 Not Found</h5>
+                    <p>Sorry, this page has been moved or not exist.</p>
+                    <HeadContent>
+                        <meta name="robots" content="noindex" />
+                    </HeadContent>
+                </MudContainer>
             </LayoutView>
         </NotFound>
     </Router>
