--- a/src/Web.WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/Web.WebApp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MudBlazor
+@using Web.WebApp.Shared
 @using Web.WebApp.Themes
 
 <!DOCTYPE html>
@@ -13,7 +14,6 @@
     <link rel="stylesheet" href="~/css/bootstrap/bootstrap.min.css" />
     <link href="~/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link href="Web.WebApp.styles.css" rel="stylesheet" />
     
     <script>
         // Hack Mud input floating label
@@ -37,9 +37,24 @@
         <header class="mud-appbar mud-appbar-fixed-top mud-elevation-1">
             <div class="mud-toolbar mud-toolbar-gutters mud-toolbar-appbar">
                 <a href="/"><img src="/img/TrackMyExpense.svg" style="width: auto; height: 22px;"></a>
-                <div class="flex-grow-1"></div>
-                <a href="/account/login" class="mud-typography mud-link mud-primary-text mud-link-underline-hover mud-typography-body1 mr-3">Log In</a>
-                <a href="/account/register" class="mud-typography mud-link mud-primary-text mud-link-underline-hover mud-typography-body1">Create Account</a>
+                <!-- -->
+                <div class="mud-container mud-container-maxwidth-md d-flex justify-end pr-5">
+                    <a type="button" href="/account/login" class="mud-button-root mud-button mud-button-outlined mud-button-outlined-primary mud-button-outlined-size-medium mud-ripple">
+                        <span class="mud-button-label">Log In 
+                            <svg class="mud-icon-root mud-svg-icon mud-inherit-text mud-icon-size-medium" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+                                <g><rect fill="none" height="24" width="24"></rect></g><g><path d="M11,7L9.6,8.4l2.6,2.6H2v2h10.2l-2.6,2.6L11,17l5-5L11,7z M20,19h-8v2h8c1.1,0,2-0.9,2-2V5c0-1.1-0.9-2-2-2h-8v2h8V19z"></path></g>
+                            </svg>
+                        </span>
+                    </a>
+                    <span class="px-2"></span>
+                    <a type="button" href="/account/register" class="mud-button-root mud-button mud-button-outlined mud-button-outlined-primary mud-button-outlined-size-medium mud-ripple">
+                        <span class="mud-button-label">Get Free Account 
+                            <svg class="mud-icon-root mud-svg-icon mud-inherit-text mud-icon-size-medium" focusable="false" viewBox="0 0 24 24" aria-hidden="true">
+                                <path d="M0 0h24v24H0z" fill="none"></path><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"></path>
+                            </svg>
+                        </span>
+                    </a>
+                </div>
             </div>
         </header>
     </div>
@@ -48,6 +63,7 @@
         @RenderBody()
     </div>
 
+    <component type="typeof(PageFooter)" render-mode="ServerPrerendered" />
 
 <script src="~/js/site.js" asp-append-version="true"></script>
 <script src="~/_content/MudBlazor/MudBlazor.min.js"></script>
